@@ -7,6 +7,7 @@ v2.0.8
 -------------------
 ! movieposterdb class was broken due to site changes at movieposterdb.com; applied a quick-hack to fix it
 ! fixes due to site changes: imdb::rating, imdb::goofs
+* complete rewrite of imdb_nowplaying class (location and structure of page had changed)
 
 v2.0.7 (21.08.2011)
 -------------------
